<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background_slide_up"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonMonter"
        android:layout_margin="8dp"
        android:layout_width="50dp"
        android:layout_height="7dp"
        android:background="@drawable/slideup_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/calendarButton"
                android:scaleType="fitXY"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_event" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"

                android:textColor="@color/primary_text"
                android:layout_marginStart="8dp"
                android:text="@string/_14_07_2018_23h" />

            <ImageView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@android:color/transparent" />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_favorite_border"
                android:scaleType="fitXY"/>

            <ImageButton
                android:id="@+id/route"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_directions"
                android:scaleType="fitXY"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/primary_text" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:textColor="@color/primary_text"
                android:padding="8dp"
                android:text="@string/feu_artifice_de_la_f_te_nationale"
                android:textAllCaps="true"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/primary_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageButton
                android:id="@+id/localisation"
                android:scaleType="fitXY"
                android:layout_marginRight="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_place"/>

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"

                android:textColor="@color/primary_text"
                android:text="@string/lille_champ_de_mars" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColor="@color/primary_text"
                android:text="@string/vous_trouverez_toutes_les_informations_sur_notre_site_si_vous_souhaitez_vous_y_rendre" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="15dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <Button
            android:id="@+id/signalButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_flag"
            android:text="@string/signaler"
            android:textColor="@color/primary_text" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>